# Optikos

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
examples/: example1.cpp
res/shaders/: shader.vert
src/: main.cpp  optikos.cpp  optikos.hpp  optikos_config.hpp
src/input/: IInputSystem.hpp
src/input/glfw/: GLFWInputSystem.cpp  GLFWInputSystem.hpp
src/logs/: log
src/platform/: IWindow.hpp  titlebar.hpp
src/platform/glfw/: GLFWWindow.cpp  GLFWWindow.hpp
src/platform/linux/: linux_titlebar.cpp
src/platform/windows/: win_titlebar.cpp
src/render/: DrawCommand.hpp  IRenderQueue.hpp  IRenderer.hpp  RenderQueue.cpp  RenderQueue.hpp
src/render/StateGuard/: GLStateGuard.cpp  GLStateGuard.hpp  IStateGuard.hpp
src/render/opengl/: OpenGLRenderer.cpp  OpenGLRenderer.hpp
src/shader/: IShader.hpp
src/shader/GLSL/: GLShader.cpp  GLShader.hpp
src/ui/: IWidget.hpp  UISystem.cpp  UISystem.hpp  Widget.hpp
src/ui/sdk/: button.cpp  button.hpp  container.cpp  container.hpp  image.cpp  image.hpp  label.cpp  label.hpp  scrollContainer.cpp  scrollContainer.hpp  slider.cpp  slider.hpp  textBox.cpp  textBox.hpp
src/ui/text/: TextFont.cpp  TextFont.hpp
src/utilities/: color.hpp  logger.cpp  logger.hpp  vec.hpp
